[package]
name = "zifer"
version = "1.0.4"
edition = "2021"
description = "Server and client for file transfer over TCP"
license = "MIT"
repository = "https://github.com/viktor111/zifer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full", "time"] }
clap = { version = "4.1.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"